# kipple

./: Cargo.toml  LICENSE  README.es.md  README.md  TODO.md
src/: args.rs  config.rs  file_categories.rs  lib.rs  main.rs  organizer.rs  utils.rs
test_kipple/: kipple.yml
tests/: integration.rs  test_organizer.rs  test_utils.rs
